--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "react-test-renderer": "^16.6.3"
+    "react-test-renderer": "^16.6.3",
+    "travis": "^0.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
