--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "jest": "^23.6.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
     "react-test-renderer": "^16.6.3",
