--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "google-map-react": "^1.1.1",
+    "google-maps-react": "^2.0.2",
     "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
