--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --collectCoverageFrom=src/**/*.js --collectCoverageFrom=!src/* --collectCoverageFrom=!src/components/Map.js",
+    "feature-test": "npx cypress run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
